HACK: CMSIS fails due stack overflow
It appears that arch_switch and SMP uses stack more heavily. Increase
stack size to avoid failures at
samples/subsys/portability/cmsis_rtos_v1/philosophers.

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -151,7 +151,7 @@ config TEST_EXTRA_STACKSIZE
 	default 1024
 
 config CMSIS_THREAD_MAX_STACK_SIZE
-	default 1024 if 64BIT
+	default 1024
 
 config CMSIS_V2_THREAD_MAX_STACK_SIZE
 	default 1024 if 64BIT
